<resources>
    <string name="app_name">ListinTelefonico</string>
    <string name="añadir">añadir</string>
    <string name="la_lista_esta_vacia">la lista esta vacia</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="cancelar">cancelar</string>
    <string name="aceptar">aceptar</string>
    <string name="n_de_telefono">Nº de telefono</string>
    <string name="borrar">borrar</string>
    <string name="esta_lista_esta_vacia">Esta lista esta Vacia</string>
    <string name="apellido">Apellido</string>
</resources>