<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        app:layout_constraintStart_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="190dp"
        android:layout_height="24dp"
        android:text="@string/n_de_telefono"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/tvApellido"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>